task: fixed modal on night-mode not being readable, too much information

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -351,6 +351,10 @@ body.night-mode .nested-comment {
   border-left: 3px solid #0074e7 !important;
 }
 
+body.night-mode .modal-body {
+  background-color: #34495e;
+}
+
 /*These two below are for keyboard users so its clear whats being selected */
 input#day-night:focus-visible {
   outline: 2px solid dodgerblue;
